// Generated by j5build v0.0.0-20250403212908-de7c3c2e6cce. DO NOT EDIT

syntax = "proto3";

package test.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";

message Message {
  option (j5.ext.v1.message).object = {};

  string greeting_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {}
  ];

  string event_id = 2 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {}
  ];

  string message_id = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  google.protobuf.Timestamp timestamp = 4 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).timestamp = {}
  ];
}
